@@ -3,6 +3,7 @@
 	$english = array(
 		// general
 		'pages_tools:allow_comments' => "Allow comments",
+		'pages_tools:unpublished' => "Unpublished",
 		
 		// notification
 		'pages_tools:notify:edit:subject' => "Your page '%s' was edited",
@@ -13,7 +14,22 @@ Your page '%s' was edited by %s. Check out the new version here:
 
 		'pages_tools:menu:title:export' => "Export",
 	
+		'pages_tools:notify:publish:subject' => "A page has been published",
+		'pages_tools:notify:publish:message' => "Hi,
+		
+your page '%s' has been published.
 
+You can view your page here:
+%s",
+		
+		'pages_tools:notify:expire:subject' => "A page has expired",
+		'pages_tools:notify:expire:message' => "Hi,
+		
+your page '%s' has expired.
+
+You can view your page here:
+%s",
+		
 		// export page
 		'pages_tools:export:title' => "Export settings",
 		
@@ -28,6 +44,17 @@ Your page '%s' was edited by %s. Check out the new version here:
 		
 		// widget
 		'pages_tools:widgets:index_pages:description' => "Show the latest pages on your community",
+		
+		// settings
+		'pages_tools:settings:advanced_publication' => "Allow advanced publication options",
+		'pages_tools:settings:advanced_publication:description' => "With this users can select a publication and expiration date for pages. Requires a working daily CRON.",
+		
+		// edit
+		'pages_tools:label:publication_options' => "Publication options",
+		'pages_tools:label:publication_date' => "Publication date (optional)",
+		'pages_tools:publication_date:description' => "When you select a date here the page will not be published until the selected date.",
+		'pages_tools:label:expiration_date' => "Expiration date (optional)",
+		'pages_tools:expiration_date:description' => "The page will no longer be published after the selected date.",
 		
 		// actions
 		// export
