@@ -21,6 +21,21 @@
 					set_input("guid", $page[1]);
 					include(dirname(dirname(__FILE__)) . "/pages/pages/view.php");
 					break;
+				case "owner":
+					$result = false;
+					
+					include(dirname(dirname(__FILE__)) . "/pages/pages/owner.php");
+					break;
+				case "friends":
+					$result = false;
+					
+					include(dirname(dirname(__FILE__)) . "/pages/pages/friends.php");
+					break;
+				case "all":
+					$result = false;
+					
+					include(dirname(dirname(__FILE__)) . "/pages/pages/world.php");
+					break;
 			}
 		}
 		
@@ -45,6 +60,23 @@
 					"class" => "pages-tools-lightbox",
 					"priority" => 500
 				));
+				
+				if(pages_tools_use_advanced_publication_options()){
+					if($entity->unpublished){
+						$class = "";
+						if(current_page_url() == $entity->getURL()){
+							$class = "pages-tools-unpublished";
+						}
+						
+						$result[] = ElggMenuItem::factory(array(
+							"name" => "unpublished",
+							"text" => elgg_echo("pages_tools:unpublished"),
+							"href" => false,
+							"item_class" => $class,
+							"priority" => 100
+						));
+					}
+				}
 			}
 		}
 		
@@ -93,3 +125,103 @@
 		
 		return $result;
 	}
+	
+	function pages_tools_daily_cron_hook($hook, $type, $return_value, $params){
+		
+		if(pages_tools_use_advanced_publication_options()){
+			$publication_id = add_metastring("publication_date");
+			$expiration_id = add_metastring("expiration_date");
+			$dbprefix = elgg_get_config("dbprefix");
+			
+			$time = elgg_extract("time", $params, time());
+			
+			$publish_options = array(
+				"type" => "object",
+				"subtype" => array("page_top"),
+				"limit" => false,
+				"joins" => array(
+					"JOIN " . $dbprefix . "metadata mdtime ON e.guid = mdtime.entity_guid",
+					"JOIN " . $dbprefix . "metastrings mstime ON mdtime.value_id = mstime.id"
+				),
+				"metadata_name_value_pairs" => array(
+					"name" => "unpublished",
+					"value" => true
+				),
+				"wheres" => array("((mdtime.name_id = " . $publication_id . ") AND (DATE(mstime.string) = DATE(NOW())))")
+			);
+			
+			$expire_options = array(
+				"type" => "object",
+				"subtypes" => array("page_top", "page"),
+				"limit" => false,
+				"joins" => array(
+					"JOIN " . $dbprefix . "metadata mdtime ON e.guid = mdtime.entity_guid",
+					"JOIN " . $dbprefix . "metastrings mstime ON mdtime.value_id = mstime.id"
+				),
+				"wheres" => pages_tools_get_publication_wheres()
+			);
+			$expire_options["wheres"][] = "((mdtime.name_id = " . $expiration_id . ") AND (DATE(mstime.string) = DATE(NOW())))";
+			
+			// ignore access
+			$ia = elgg_set_ignore_access(true);
+			
+			// get unpublished pages that need to be published
+			if($entities = elgg_get_entities_from_metadata($publish_options)){
+				foreach($entities as $entity){
+					// add river event
+					add_to_river("river/object/page/create", "create", $entity->getOwner(), $entity->getGUID());
+					
+					// set time created
+					$entity->time_created = $time;
+					
+					// make sure the page is listed
+					unset($entity->unpublished);
+					
+					// notify the user
+					notify_user($entity->getOwnerGUID(), 
+								$entity->site_guid, 
+								elgg_echo("pages_tools:notify:publish:subject"),
+								elgg_echo("pages_tools:notify:publish:message", array(
+									$entity->title,
+									$entity->getURL()
+								)
+					));
+					
+					// save everything
+					$entity->save();
+				}
+			}
+			
+			// get pages that have expired
+			if($entities = elgg_get_entities_from_metadata($expire_options)){
+				foreach($entities as $entity){
+					// remove river event
+					elgg_delete_river(array(
+						"object_guid" => $entity->getGUID(),
+						"action_type" => "create",
+					));
+						
+					// make sure the page is no longer listed
+					$entity->unpublished = true;
+					
+					// notify the user
+					notify_user($entity->getOwnerGUID(),
+								$entity->site_guid,
+								elgg_echo("pages_tools:notify:expire:subject"),
+								elgg_echo("pages_tools:notify:expire:message", array(
+									$entity->title,
+									$entity->getURL()
+								)
+					));
+						
+					// save everything
+					$entity->save();
+				}
+			}
+			
+			// reset access
+			elgg_set_ignore_access($ia);
+		}
+		
+	}
+	
