@@ -40,6 +40,39 @@
 	echo elgg_view("input/dropdown", array("name" => "allow_comments", "value" => $allow_comments, "options_values" => $yesno_options));
 	echo "</div>";
 	
+	if(pages_tools_use_advanced_publication_options()){
+		if(!empty($page)){
+			$publication_date_value = $page->publication_date;
+			$expiration_date_value = $page->expiration_date;
+		}
+		
+		if(empty($publication_date_value)){
+			$publication_date_value = "";
+		}
+		
+		if(empty($expiration_date_value)){
+			$expiration_date_value = "";
+		}
+		
+		$publication_date = "<div class='mbs'>";
+		$publication_date .= "<label for='publication_date'>" . elgg_echo("pages_tools:label:publication_date") . "</label>";
+		$publication_date .= elgg_view("input/date", array(
+										"name" => "publication_date", 
+										"value" => $publication_date_value));
+		$publication_date .= "<div class='elgg-subtext'>" . elgg_echo("pages_tools:publication_date:description") . "</div>";
+		$publication_date .= "</div>";
+		
+		$expiration_date = "<div class='mbs'>";
+		$expiration_date .= "<label for='expiration_date'>" . elgg_echo("pages_tools:label:expiration_date") . "</label>";
+		$expiration_date .= elgg_view("input/date", array(
+										"name" => "expiration_date", 
+										"value" => $expiration_date_value));
+		$expiration_date .= "<div class='elgg-subtext'>" . elgg_echo("pages_tools:expiration_date:description") . "</div>";
+		$expiration_date .= "</div>";
+		
+		echo elgg_view_module("info", elgg_echo("pages_tools:label:publication_options"), $publication_date . $expiration_date);
+	}
+	
 	// support for categories
 	$cats = elgg_view("input/categories", $vars);
 	if (!empty($cats)) {
